--- a/packages/portfolio-components/example/index.html
+++ b/packages/portfolio-components/example/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Playground</title>
+    <style>
+      * {
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0px;
+      }
+    </style>
   </head>
 
-  <body>
+  <body style="background-color: #0D1220; font-family: 'Roboto', sans-serif;">
     <div id="root"></div>
     <script src="./index.tsx"></script>
   </body>
