--- a/packages/portfolio-core/public/index.html
+++ b/packages/portfolio-core/public/index.html
@@ -2,7 +2,14 @@
 <html>
 <head lang="en">
   <title>Hello React</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      padding: 0;
+      margin: 0px;
+    }
+  </style>
 </html>
-<body>
+<body style="background-color: #0D1220; font-family: 'Roboto', sans-serif;">
   <div id="app-root">App is loading...</div>
 </body>
